--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ preserveTaxonomyNames = true
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = "disqus_WGAASbo8r7"
+disqusShortname = "Taz"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = "UA-110831086-1"
