--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ defaultContentLanguageInSubdir = false
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
   highlight_languages = []
-  highlight_style = "github"
+#  highlight_style = "github"
 
   # Enable native social sharing buttons?
   sharing = false
