--- a/config.toml
+++ b/config.toml
@@ -33,8 +33,8 @@ defaultContentLanguageInSubdir = false
 
 [params]
   # Color theme.
-  #   Choose from `default`, `ocean`, `forest`, or `coffee`.
-  color_theme = "default"
+  #   Choose from `default`, `ocean`, `forest`, or `coffee` (or newtheme).
+  color_theme = "newtheme"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
